--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,6 @@ secondary = false
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.plugins."keyring.backends"]
+"onepassword" = "onepassword_keyring:onepassword_keyring"
