--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "onepassword_keyring"
-version = "2.0.4"
+version = "2.0.5"
 description = "keyring wrapper for onepassword module"
 authors = ["David Brown <forums@smurfless.com>"]
 
@@ -27,3 +27,6 @@ secondary = false
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.plugins."keyring.backends"]
+"onepassword" = "onepassword_keyring"
